# tarea

./: pyproject.toml
database/: trabajo.sql
src/: main.py
src/controllers/: TareaControllers.py  UserController.py
src/database/: trabajo.sql
src/models/: Tareas.py  TareasModel.py  UserModel.py  databaseModel.py  schemas.py  schemasModel.py
src/tarea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/views/: dashboard.py  dashboardView.py  loginView.py  registroView.py
tarea/: main.py
