[project]
name = "tarea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flet>=0.82.2",
    "mysql-connector-python>=9.6.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
]



[project.scripts]
app = "main:main"

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"
